# RenderGen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  profile.sh
engine/: CMakeLists.txt
engine/benchmarks/ops/: transform_bench.cc
engine/include/: common.h  core_math.h
engine/include/draw/: draw.h  sdlimagecanvas.h
engine/include/geometry/: bbox.h  differential.h  geometry.h  interaction.h  matrix.h  normal.h  point.h  quaternion.h  ray.h  shape.h  vector.h
engine/include/geometry/shapes/: plane.h  shape.h  sphere.h
engine/include/io/: obj_file.h  ppmimage.h  tgaimage.h
engine/include/media/: medium.h
engine/include/ops/: transform.h
engine/include/scene/: camera.h  light.h  scene.h
engine/include/scene/lights/: pointlight.h
engine/include/system/: rengen_memory.h  singleton.h  transformfactory.h
engine/include/system/render_subsystem/: actor_subsystem.h  render_subsystem.h  serial_subsystem.h
engine/src/: core_math.cpp
engine/src/draw/: sdlimagecanvas.cpp
engine/src/geometry/: math.cpp  quaternion.cpp  vector.cpp
engine/src/geometry/shapes/: plane.cpp  shape.cpp  sphere.cpp
engine/src/io/: model.cpp  ppmimage.cpp  tgaimage.cpp
engine/src/ops/: transform.cpp
engine/src/scene/: camera.cpp  light.cpp  scene.cpp
engine/src/scene/lights/: pointlight.cpp
engine/src/system/: rengen_memory.cpp  transformfactory.cpp
engine/src/system/render_subsystem/: serial_subsystem.cpp
engine/tests/geometry/: bbox_test.cc  normal_test.cc  point_test.cc  ray_test.cc  vector_test.cc
engine/tests/io/: test_ppmImage.cc
engine/tests/ops/: transform_test.cc
include/: CApp.h  draw.h  geometry.h  model.h
src/: CApp.cpp  geometry.cpp  main.cpp  main_old.cpp  model.cpp  tmain.cpp
